fixed issue with memory jar colours overlapping

--- a/Codiacs/src/memory-jar/MemoryJarApp.css
+++ b/Codiacs/src/memory-jar/MemoryJarApp.css
@@ -14,21 +14,13 @@
 
 .overlay {
   position: absolute;
-  bottom: 0; 
-  background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.5); /* Black see-through */
-  color: #f1f1f1; 
+  bottom: 0;
   width: 97%;
-  /* height: 75%; */
   transition: .5s ease;
-  opacity: 0;
-  color: white;
-  font-size: 20px;
-  padding: 20px;
-  text-align: center;
 }
 
 .first {
+  bottom: 2.5%;
   background: rgb(89, 8, 220);
   background: rgba(89, 8, 220, 0.5); /* See-through */
   border-bottom-left-radius: 37px;
@@ -36,29 +28,25 @@
 }
 
 .second {
-  bottom: 22.5%;
   background: rgb(236, 127, 25);
   background: rgba(236, 127, 25, 0.5); /* See-through */
 }
 
 .third {
-    bottom: 22.5%;
     background: rgb(12, 198, 28);
     background: rgba(12, 198, 28, 0.5); /* See-through */
 }
 
 .fourth {
-    bottom: 22.5%;
     background: rgb(216, 8, 126);
     background: rgba(216, 8, 126, 0.5); /* See-through */
 }
 
 .fifth {
-    bottom: 22.5%;
     background: rgb(8, 31, 183);
     background: rgba(8, 31, 183, 0.5); /* See-through */
 }
 
-.memory-container:hover .overlay {
+.memory-container .overlay {
   opacity: 1;
 }
